--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "parserOptions": {
       "ecmaVersion": 2020
     },
-    "rules": {}
+    "rules": {
+      "prettier/prettier": ["error", { "endOfLine": "auto" }]
+    }
   },
   "browserslist": [
     "> 1%",
